# maybe-path

./: Cargo.toml  README.md
.github/workflows/: docs.yml  linter.yml  miri.yml  tests.yml
benches/: vs_cow.rs  vs_path.rs
src/: lib.rs  maybe_path.rs  not_cow.rs
tests/: maybe_path.rs  maybe_pathbuf.rs
